--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -8,6 +8,8 @@ nav:
     - Nouns: vocabulary/nouns.md
     - Verbs: vocabulary/verbs.md
     - Numbers: vocabulary/numbers.md
+    - Pronouns: vocabulary/pronouns.md
+    - Adverbs: vocabulary/adverbs.md
 
 # theme: simple-blog
 # theme: readthedocs
